--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --no-restart -c \"npm run start\"",
-    "start": "wrangler pages dev --compatibility-date=2023-06-21 ./public",
+    "start": "wrangler pages dev --compatibility-date=2023-06-21 ./public --kv=WORDS",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -24,7 +24,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.6",
     "wrangler": "^3.1.1"
   },
   "engines": {
